--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutHome"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.Home_Act"
-    android:background="@drawable/fondohome">
+    android:background="@drawable/fondohome"
+    tools:context=".activities.Home_Act">
 
     <ImageButton
-        android:id="@+id/userButton_home"
+        android:id="@+id/prefbtn_home"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
