--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -66,7 +66,7 @@
         android:id="@+id/textView10"
         android:layout_width="146dp"
         android:layout_height="50dp"
-        android:text="Your best ally in your battles"
+        android:text=" ¡Your best ally   in your battles!"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,14 +77,14 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="205dp"
-        android:layout_height="103dp"
-        android:text="know the statistics of all your favorite characters in each event"
+        android:layout_width="234dp"
+        android:layout_height="95dp"
+        android:text="know the statistics of all your favorite characters ♥ in each event ¡actives or incoming!"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.786"
+        app:layout_constraintHorizontal_bias="0.87"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.666" />
 </androidx.constraintlayout.widget.ConstraintLayout>
